--- a/SimpleWebSiteStyle.css
+++ b/SimpleWebSiteStyle.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: #2D4164;
-    background-image: url("image/ChatGPT 26-2025-10_44_07 PM.png");
+    background-image: url("image/Under-development.png");
     background-repeat: no-repeat;
     background-position: right;
     background-attachment: fixed;
