--- a/SimpleWebSiteStyle.css
+++ b/SimpleWebSiteStyle.css
@@ -20,11 +20,14 @@ h1 {
     height: 200px;
     margin: 20px auto;
     border: 5px solid red; 
+    padding: 10px
 }
 .audio-container {
    width: 300px;
     height: 40px;
     margin: 20px auto;
+    padding: 10px
     
 }
+
 
